Fixed dropdown spacing / colouring

--- a/project/src/Components/TopNavView.css
+++ b/project/src/Components/TopNavView.css
@@ -3,6 +3,10 @@
     margin-top: 0vh !important; 
 }
 
+.navbar .navbar-nav .nav-link:hover{
+    color: #2b2a2a;
+}
+
 .loggedOut{
     margin-right: 2vh;
 }
@@ -15,18 +19,27 @@
 
 #dropdown-right{
     background-color: transparent;
-    color: white;
     margin-left: 4vh;
+}
+
+.btn-primary{
+    border-color: white;
+}
+
+.btn-toggle{
+    border-color: red;
 }
 
 .dropdown-content{
     margin: 0vh;
     background-color: #191414;
-    border: 1px solid transparent;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
 .dropdown-menu{
     padding: 0vh;
     background-color: transparent;
+}
+
+span{
+    margin-right: 2vh;
 }
